--- a/app/views/logged/cheatsheets/index.html.erb
+++ b/app/views/logged/cheatsheets/index.html.erb
@@ -1,7 +1,7 @@
 <h1>List of cheatsheets</h1>
 
 <div class="o-container-cheatsheets">
-  <%= link_to "Create Cheatsheet", '/cheatsheets/new', method: :get, class: 'e-button e-button-submit' %>
+  <%= link_to "Create New Cheatsheet", '/cheatsheets/new', method: :get, class: 'e-button e-button-submit' %>
 
   <% if @cheatsheets.empty? %>
     <p>You haven't created any yet</p>
