--- a/app/views/layouts/_top_bar.html.erb
+++ b/app/views/layouts/_top_bar.html.erb
@@ -1,4 +1,4 @@
-<nav class="e-nav">
+<nav class="o-container-nav e-nav">
   <%= link_to image_tag('logo.png', :class => "u-image-logo"), "/" %>
   <div class="o-container-buttons-nav">
     <% if logged_in? %>
