--- a/app/assets/stylesheets/elements/link.scss
+++ b/app/assets/stylesheets/elements/link.scss
@@ -24,3 +24,26 @@
   border-radius: 5px;
   padding: 10px 20px;
 }
+
+.e-link-image {
+  display: flex;
+  justify-content: center;
+  align-items: center;  
+  cursor: pointer;
+  background-size: cover;
+}
+
+.e-link-image-edit {
+  position: absolute;
+  height: 34px;
+  width: 34px;
+  border-radius: 20px;
+  margin-left: 5px;
+  background-color: #f5f5f5;
+}
+
+.e-link-image-edit-animation {
+  transition-property: margin-left;
+  transition-duration: 0.5s;
+}
+
