--- a/app/assets/stylesheets/objects/container.scss
+++ b/app/assets/stylesheets/objects/container.scss
@@ -26,3 +26,8 @@
   margin: 0 20px 0 20px;
   padding: 0 20px 0 20px;
 }
+
+.o-container-buttons-edit {
+  display: flex;
+  align-items: center;
+}
