--- a/app/views/password_resets/edit.html.erb
+++ b/app/views/password_resets/edit.html.erb
@@ -1,6 +1,6 @@
 <h1>Reset Password</h1>
 
-<%= form_for @user, :url => password_reset_path(params[:id]) do |f| %>
-  <%= f.password_field :password, placeholder: "new password" %> 
-  <%= f.submit 'Update password' %>
+<%= form_with @user, :url => password_reset_path(params[:id]), class: 'e-form e-form-insert' do |f| %>
+  <%= f.password_field :password, placeholder: "new password", class: 'e-input' %> 
+  <%= f.submit 'Update password', class: 'e-button e-button-submit' %>
 <% end %>
