--- a/app/views/password_resets/new.html.erb
+++ b/app/views/password_resets/new.html.erb
@@ -1,5 +1,5 @@
 <h3>Please introduce your email and we will send you an email to set your password</h3>
-<%= form_tag password_resets_path, method: :post do %>
-   <%= email_field_tag :email, nil, placeholder: "Email" %>
-   <%= submit_tag "Send" %>
+<%= form_tag password_resets_path, method: :post, class: 'e-form e-form-insert' do %>
+   <%= email_field_tag :email, nil, placeholder: "Email", class: 'e-input' %>
+   <%= submit_tag "Send", class: 'e-button e-button-submit' %>
 <%end%>
