And some more syles

--- a/app/views/logged/cheatsheets/new.html.erb
+++ b/app/views/logged/cheatsheets/new.html.erb
@@ -1,4 +1,4 @@
-<h1>create a new cheatsheet</h1>
+<h1 class="e-title">create a new cheatsheet</h1>
 
 <%= form_with model: @cheatsheet do |form| %>
   <%= form.text_field :name %>
