--- a/app/views/logged/groups/edit.html.erb
+++ b/app/views/logged/groups/edit.html.erb
@@ -1,4 +1,4 @@
-<h1>Edit Group</h1>
+<h1 class="e-title">Edit Group</h1>
 <%= form_with model: @group, method: :patch, local: true, class: 'e-form e-form-insert' do |form| %>
   <%= form.text_field :name, class: 'e-input' %>
   <h5>Select the cheatsheets to be in this group</h5>
