--- a/app/views/logged/cheatsheets/edit.html.erb
+++ b/app/views/logged/cheatsheets/edit.html.erb
@@ -1,4 +1,4 @@
-<h1>Edit Cheatsheet</h1>
+<h1 class="e-title">Edit Cheatsheet</h1>
 <%= form_with model: @cheatsheet, method: :patch, local: true, class: 'e-form e-form-insert' do |form| %>
   <%= form.text_field :name, class: 'e-input' %>
   <%= form.submit "Update Cheatsheet", class: 'e-button e-button-submit' %>
