--- a/app/views/logged/groups/new.html.erb
+++ b/app/views/logged/groups/new.html.erb
@@ -1,4 +1,4 @@
-<h1>create a new group</h1>
+<h1 class="e-title">create a new group</h1>
 
 <%= form_with model: @group do |form| %>
   <%= form.text_field :name, placeholder: 'Name for your group' %>
