--- a/app/views/password_resets/edit.html.erb
+++ b/app/views/password_resets/edit.html.erb
@@ -1,4 +1,4 @@
-<h1>Reset Password</h1>
+<h1 class="e-title">Reset Password</h1>
 
 <%= form_with @user, :url => password_reset_path(params[:id]), class: 'e-form e-form-insert' do |f| %>
   <%= f.password_field :password, placeholder: "new password", class: 'e-input' %> 
