Some more styles

--- a/app/assets/stylesheets/elements/title.scss
+++ b/app/assets/stylesheets/elements/title.scss
@@ -1,4 +1,9 @@
 
 .e-title {
-  padding: 32px;
+  padding: 16px 32px 16px 32px;
+}
+
+.e-title-2, .e-title-3, .e-title-4, .e-title-5 {
+  padding-top: 0;
+  padding-bottom: 0;
 }
