--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,4 @@
 
-<h1 class="e-title">Memory is overrated</h1>
-<h4 class="e-title">Log in if you have an account already or Sign up if you are new around here</h4>
+<h1 class="e-title e-title-1">Memory is overrated</h1>
+<h4 class="e-title e-title-4">Log in if you have an account already or Sign up if you are new around here</h4>
 
