--- a/app/views/logged/groups/index.html.erb
+++ b/app/views/logged/groups/index.html.erb
@@ -1,4 +1,4 @@
-<h1 class="e-title">Choose a group or create a new one</h1>
+<h1 class="e-title e-title-1">Choose a group or create a new one</h1>
 
 <div class="o-container-groups">
   <%= link_to "Create New Group", '/groups/new', method: :get, class: 'e-button e-button-submit' %>
