--- a/app/assets/stylesheets/elements/image.scss
+++ b/app/assets/stylesheets/elements/image.scss
@@ -2,3 +2,11 @@
   height: 25px;
   width: 25px;
 }
+
+.e-image-scenario-add {
+  position: fixed;
+  height: 50px;
+  bottom: 5px;
+  right: 0;
+  cursor: pointer;
+}
