--- a/app/assets/stylesheets/scaffold.scss
+++ b/app/assets/stylesheets/scaffold.scss
@@ -18,3 +18,11 @@ body {
   min-height: 100%;
   background-color: #f5f5f5;
 }
+
+.trix-content {
+  border: 0;
+  border-radius: 0 0 5px 5px;
+  padding: 20px;
+  background-color: rgb(241, 241, 241);
+  margin-top: 15px;
+}
