--- a/app/assets/stylesheets/scenarios.scss
+++ b/app/assets/stylesheets/scenarios.scss
@@ -1,47 +1,47 @@
 
-.scenario {
-  display: flex;
-  flex-direction: row;
-  width: 100%;
-  max-width: 500px;
+// .scenario {
+//   display: flex;
+//   flex-direction: row;
+//   width: 100%;
+//   max-width: 500px;
 
-  &:hover {
-    .edit {
-      display: flex;
-    }
-  }
+//   &:hover {
+//     .edit {
+//       display: flex;
+//     }
+//   }
 
-  .data {
-    display: flex;
-    flex-direction: column;
-    flex-grow: 1;
-    border: 0;
-    border-radius: 5px;
-    padding: 20px;
-    margin-top: 20px;
-    background-color: white;
+//   .data {
+//     display: flex;
+//     flex-direction: column;
+//     flex-grow: 1;
+//     border: 0;
+//     border-radius: 5px;
+//     padding: 20px;
+//     margin-top: 20px;
+//     background-color: white;
 
-    .trix-content {
-      border: 0;
-      border-radius: 0 0 5px 5px;
-      padding: 20px;
-      background-color: rgb(241, 241, 241);
-      margin-top: 15px;
-    }
-  }
+//     .trix-content {
+//       border: 0;
+//       border-radius: 0 0 5px 5px;
+//       padding: 20px;
+//       background-color: rgb(241, 241, 241);
+//       margin-top: 15px;
+//     }
+//   }
 
-  .edit {
-    display: none;
-    flex-direction: column;
+//   .edit {
+//     display: none;
+//     flex-direction: column;
 
-    input[type="image"], img {
-      margin: 30px 0 0 10px;
-      height: 30px;
-      cursor: pointer;
-    }
+//     input[type="image"], img {
+//       margin: 30px 0 0 10px;
+//       height: 30px;
+//       cursor: pointer;
+//     }
 
-    img {
-      cursor: grab
-    }
-  }
-}
+//     img {
+//       cursor: grab
+//     }
+//   }
+// }
