Everything seems kind of fine, but still stuff to do

--- a/app/assets/stylesheets/objects/container.scss
+++ b/app/assets/stylesheets/objects/container.scss
@@ -1,4 +1,3 @@
-
 .o-container {
   display: flex;
   flex-direction: column;
@@ -38,7 +37,10 @@
   background-color: white;
 }
 
-.o-container-scenario-item-content {
+.o-container-scenario-droppable {
+  display: flex;
+  justify-content: center;
+  width: 100%;
 }
 
 .o-container-scenario-edit-buttons {
