--- a/app/assets/stylesheets/utilities/general.scss
+++ b/app/assets/stylesheets/utilities/general.scss
@@ -1,3 +1,19 @@
 .u--hidden {
   display: none;
 }
+
+.u--salmon {
+  background: #ffa8a8;
+}
+
+.u--blue {
+  background-color: #aaaaff;
+}
+
+.u--margin-right-4 {
+  margin-right: 4px;
+}
+
+.u--margin-left-4 {
+  margin-left: 4px;
+}
