--- a/app/assets/stylesheets/scaffold.scss
+++ b/app/assets/stylesheets/scaffold.scss
@@ -17,12 +17,12 @@ body {
   width: 100%;
   min-height: 100%;
   background-color: #f5f5f5;
+  padding-bottom: 16px;
 }
 
 .trix-content {
   border: 0;
-  border-radius: 0 0 5px 5px;
+  border-radius: 4px;
   padding: 20px;
   background-color: rgb(241, 241, 241);
-  margin-top: 15px;
 }
