--- a/app/views/scenarios/_scenario.html.erb
+++ b/app/views/scenarios/_scenario.html.erb
@@ -1,9 +1,8 @@
-
-<div class='o-wrapper-scenario'>
+<div class='o-wrapper-scenario u-padding--0'>
   <div class='o-container-scenario-item'>
-    <div class=''>
+    <p class='e-text-scenario-content'>
        <%= local_assigns[:scenario].content %>
-    </div> 
+    </p> 
     <% unless local_assigns[:scenario].example.empty? %>  
       <%= local_assigns[:scenario].example %>
     <% end %>
