--- a/app/assets/stylesheets/objects/container.scss
+++ b/app/assets/stylesheets/objects/container.scss
@@ -37,6 +37,11 @@
   background-color: white;
 }
 
+.o-container-scenario {
+  width: 100%;
+  max-width: 900px;
+}
+
 .o-container-scenario-droppable {
   display: flex;
   justify-content: center;
@@ -44,7 +49,7 @@
 }
 
 .o-container-scenario-edit-buttons {
-  display: flex;
+  display: none;
   flex-direction: column;
   
 
