--- a/app/assets/stylesheets/objects/wrapper.scss
+++ b/app/assets/stylesheets/objects/wrapper.scss
@@ -8,6 +8,12 @@
   padding: 24px;
   margin: 8px;
   border-radius: 4px;
+
+  &:hover {
+    .o-container-scenario-edit-buttons {
+      display: flex;
+    }
+  }
 }
 
 .o-wrapper-scenario-buttons-edit {
