Tests adapted to the recent changes

--- a/app/views/notifications/_cookie.html.erb
+++ b/app/views/notifications/_cookie.html.erb
@@ -2,7 +2,7 @@
 <% flash.each do |type, message| %>
   <div data-controller="message" >
     <% if type == 'alert' %>
-    <div data-message-target="cookie" class='e-flash u-flash--notice'>
+    <div data-message-target="cookie" class='e-flash u-flash--alert'>
       <%= message %>
     </div>
     <% end %>
