--- a/app/views/logged/cheatsheets/show.html.erb
+++ b/app/views/logged/cheatsheets/show.html.erb
@@ -17,26 +17,23 @@
   <h3 class="e-title e-title-3">You haven't created scenarios for this cheatsheet. Click the 'plus' button at the button to add some.</h3>
 <% end %>
 
-<div class="o-container o-container-scenario" data-controller="drag-item" data-action="dragstart->drag-item#dragstart dragover->drag-item#dragover dragenter->drag-item#dragenter dragleave->drag-item#dragleave drop->drag-item#drop dragend->drag-item#dragend">
+<div class="o-container o-container-scenario" data-controller="drag-item"
+  data-action="dragstart->drag-item#dragstart dragover->drag-item#dragover dragenter->drag-item#dragenter dragleave->drag-item#dragleave drop->drag-item#drop dragend->drag-item#dragend"
+>
   <% @cheatsheet.sorted_scenarios.each_with_index do |scenario, index| %>
 
     <div class="o-container-scenario-droppable" data-controller="edit-scenario" draggable="true" data-scenario-id="<%= scenario.id %>" data-drag-item-target="scenario">
-        <%# this shows the scenario %>
-        <div data-edit-scenario-target="showingScenarioWrapper">
-          <%= render 'scenarios/scenario', scenario: scenario do %>
-            <%= image_submit_tag("delete-icon.png") %>
-            <%= image_tag 'edit-icon.png', data: { action: "click->edit-scenario#toggle" } %>
-          <% end %>
-        </div>
-        <%# this form is to edit the scenario %>
-        <%= form_with model: scenario, url: cheatsheet_scenario_path(@cheatsheet, scenario), local: true, class: 'e-form e-form-scenario' do |form| %>
-          <div data-edit-scenario-target="editingScenarioWrapper" class="o-container o-wrapper-scenario u--blue u--hidden">
-            <%= render partial: 'scenarios/edit_scenario', locals: { scenario_form: form } %>
-          </div>
-          <%# the value of the hidden field is set in 'edit_scenario_controller '%>
-          <div data-edit-scenario-target="hiddenDeleteScenario">
-            <%= form.hidden_field :_destroy, value: true %>
-          </div>
+      <%# this shows the scenario %>
+      <%= render 'scenarios/scenario', scenario: scenario do %>
+        <%= link_to image_tag("delete-icon.png"), "#{cheatsheet_scenario_path(@cheatsheet, scenario)}?group_id=#{@group&.id}", { method: :delete } %>
+        <%= image_tag 'edit-icon.png', data: { action: "click->edit-scenario#toggle" } %>
+      <% end %>
+      <%# this form is to edit the scenario %>
+      <%= form_with model: scenario, url: cheatsheet_scenario_path(@cheatsheet, scenario),
+        local: true, class: 'e-form e-form-scenario u--blue u--hidden',
+        data: { 'edit-scenario-target' => "editingScenarioWrapper" } do |form|
+      %>      
+        <%= render partial: 'scenarios/edit_scenario', locals: { scenario_form: form } %>
       <% end %>
     </div>
   <% end %>
