--- a/app/views/scenarios/_scenario.html.erb
+++ b/app/views/scenarios/_scenario.html.erb
@@ -1,4 +1,4 @@
-<div class='o-wrapper-scenario u-padding--0'>
+<div data-edit-scenario-target="showingScenarioWrapper" class='o-wrapper-scenario u-padding--0'>
   <div class='o-container-scenario-item'>
     <p class='e-text-scenario-content'>
        <%= local_assigns[:scenario].content %>
