--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Kiria</title>
+    <title>Flamy Duck</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
+    <link rel="shortcut icon" href=<%= image_url('favicon.ico') %> type="image/x-icon" />
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
