--- a/app/views/logged/cheatsheets/show.html.erb
+++ b/app/views/logged/cheatsheets/show.html.erb
@@ -25,8 +25,8 @@
     <div class="o-container-scenario-droppable" data-controller="edit-scenario" draggable="true" data-scenario-id="<%= scenario.id %>" data-drag-item-target="scenario">
       <%# this shows the scenario %>
       <%= render 'scenarios/scenario', scenario: scenario do %>
-        <%= link_to image_tag("delete-icon.png"), "#{cheatsheet_scenario_path(@cheatsheet, scenario)}?group_id=#{@group&.id}", { method: :delete } %>
-        <%= image_tag 'edit-icon.png', data: { action: "click->edit-scenario#toggle" } %>
+        <%= link_to image_tag("delete-icon.png", alt: 'delete scenario'), "#{cheatsheet_scenario_path(@cheatsheet, scenario)}?group_id=#{@group&.id}", { method: :delete } %>
+        <%= image_tag 'edit-icon.png', data: { action: "click->edit-scenario#toggle" }, alt: 'edit scenario' %>
       <% end %>
       <%# this form is to edit the scenario %>
       <%= form_with model: scenario, url: cheatsheet_scenario_path(@cheatsheet, scenario),
