--- a/app/assets/stylesheets/elements/title.scss
+++ b/app/assets/stylesheets/elements/title.scss
@@ -3,6 +3,8 @@
   padding: 16px 32px 16px 32px;
 }
 
+.e-title-1 {}
+
 .e-title-2, .e-title-3, .e-title-4, .e-title-5 {
   padding-top: 0;
   padding-bottom: 0;
