--- a/app/views/logged/cheatsheets/index.html.erb
+++ b/app/views/logged/cheatsheets/index.html.erb
@@ -1,4 +1,4 @@
-<h1 class="e-title e-title-1">List of cheatsheets</h1>
+<h1 class="e-title e-title-1">Cheatsheets</h1>
 
 <div class="o-container-cheatsheets">
   <%= link_to "Create New Cheatsheet", '/cheatsheets/new', method: :get, class: 'e-button e-button-submit' %>
