--- a/app/assets/stylesheets/elements/input.scss
+++ b/app/assets/stylesheets/elements/input.scss
@@ -1,7 +1,8 @@
+@import 'tools';
 
 .e-input {
   border: 0;
-  border-radius: 4px;
-  padding: 16px;
-  margin-top: 16px;
+  border-radius: rythm(1);
+  padding: rythm(2);
+  margin-top: rythm(2);
 }
