--- a/app/assets/stylesheets/scaffold.scss
+++ b/app/assets/stylesheets/scaffold.scss
@@ -1,9 +1,11 @@
 
+ @import 'tools';
+ 
  html, body {
   height: 100%;
   margin: 0;
   font-family: 'Rubik', sans-serif;
-  color: #2b394a;
+  color: $dark;
 }
 
 *, *:before, *:after {
@@ -16,7 +18,7 @@ body {
   justify-content: flex-start;
   width: 100%;
   min-height: 100%;
-  background-color: #f5f5f5;
+  background-color: $light;
   padding-bottom: 16px;
 }
 
