Added extra margin-bottom to last scanario card in list

--- a/app/assets/stylesheets/objects/container.scss
+++ b/app/assets/stylesheets/objects/container.scss
@@ -50,6 +50,10 @@
   width: 100%;
 }
 
+.o-container-scenario-droppable:last-child {
+  margin-bottom: rythm(10);
+}
+
 .o-container-scenario-edit-buttons {
   display: none;
   flex-direction: column;
