Some styling for logo and plus button

--- a/app/assets/stylesheets/elements/navbar.scss
+++ b/app/assets/stylesheets/elements/navbar.scss
@@ -3,6 +3,7 @@
 .e-nav {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   padding: rythm(2);
   background-color: $heavy;
 }
