--- a/app/assets/stylesheets/elements/image.scss
+++ b/app/assets/stylesheets/elements/image.scss
@@ -8,7 +8,8 @@
 .e-image-scenario-add {
   position: fixed;
   height: rythm(6);
-  bottom: rythm(6);
-  right: 0;
+  width: rythm(6);
+  right: rythm(2);
+  bottom: rythm(2);
   cursor: pointer;
 }
