--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,4 @@
-<h1 class="e-title e-title-1">Sign up</h1>
+<h1 class="e-title">Sign up</h1>
 <%= form_with model: @user, class: 'e-form e-form-insert' do |f| %>
   <%= f.text_field :name, placeholder: "Name", class: 'e-input' %>
   <%= f.password_field :password, placeholder: "Password", class: 'e-input' %>
