--- a/app/views/password_resets/new.html.erb
+++ b/app/views/password_resets/new.html.erb
@@ -1,4 +1,4 @@
-<h3 class="e-title e-title-3">Please introduce your email and we will send you an email to set your password</h3>
+<h3 class="e-title">Please introduce your email and we will send you an email to set your password</h3>
 <%= form_tag password_resets_path, method: :post, class: 'e-form e-form-insert' do %>
    <%= email_field_tag :email, nil, placeholder: "Email", class: 'e-input' %>
    <%= submit_tag "Send", class: 'e-button e-button-submit' %>
